--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ serde_yaml = "0.9"
 regex = "1.10.4"
 image = "0.24.9"
 base64 = "0.22.1"
-reqwest = { version = "0.12.4", features = ["blocking", "json"] }
+reqwest = { version = "0.12.4", features = ["blocking", "json", "native-tls-vendored"] }
 open = "5.0.0"
 ratatui-image = "0.8.0"
 
