--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ reqwest = { version = "0.12.4", features = ["blocking", "json", "native-tls-vend
 open = "5.0.0"
 ratatui-image = "0.8.0"
 md5 = "0.7.0"
+directories = "5.0"
 
 [dev-dependencies]
 readitnow = { path = "." }
