--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ open = "5.0.0"
 ratatui-image = "0.8.0"
 md5 = "0.7.0"
 directories = "5.0"
+pulldown-cmark = "0.9.1"
 
 [dev-dependencies]
 readitnow = { path = "." }
